--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  font-style: sans-serif;
   text-align: center;
 }
 
@@ -35,4 +36,26 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.button {
+  width: 100px;
+  height: 100px;
+  line-height: 45px;
+  text-align: center;
+  padding: 0;
+  border-radius: 50%; */
+
+ }
+.btn-circle-lg {
+width: 100px;
+height: 100px;
+line-height: 55px;
+font-size: 1.1rem;
+display: inline-block;
+}
+
+.fullpage {
+  background-color: silver;
 }
