--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   font-style: sans-serif;
   text-align: center;
 }
@@ -27,7 +27,7 @@
 
 .App-link {
   color: #61dafb;
-}
+} */
 
 @keyframes App-logo-spin {
   from {
@@ -44,7 +44,7 @@
   width: 160px; /* Set the width of the sidebar */
   text-align: center;
   position: fixed;
-  z-index: 1;
+  z-index: 100;
   top: 0; /* Stay at the top */
   left: 0;
   /* overflow-x: hidden; */
@@ -85,19 +85,26 @@
   display: inline-block; 
  } */
 
-
-div#box1
+ /* .elevator 
+ {
+  
+ } */
+.section 
 {
-  position: relative;
-  float: left;
-  width: 100%;
-  height: 900px;
-  background: hotpink;
+  background-color: hotpink;
   height: 100vh;
+  width: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   transition-timing-function: 1s ease-in-out;
+  margin: 0;
+}
+
+/* div#box1
+{
+  background: hotpink;
+
 }
 div#box2
 {
@@ -143,67 +150,32 @@ div#box6
   justify-content: center;
   align-items: center;
   transition-timing-function: 1s ease-in-out;
-}
-.curtain {
-  width: 100%; /* Ensures the component is the full screen width */
-  height: 100vh; /* We're using this for demo purposes */
-  overflow: hidden; /* Allows us to slide the panels outside the container without them showing */
-}
-  
-.curtain__wrapper {
-  width: 100%;
+} */
+
+/* .leftDoor 
+{
+  z-index: 9;
+  position: absolute; 
+  top: 0; 
+  width: 100%; 
   height: 100%;
-}
-      
-.curtain__panel {
-  background: orange;
-  width: 50%; /* Each panel takes up half the container */
-  height: 100vh; /* Used for demo purposes */
-  float: left; /* Makes sure panels are side-by-side */
-  position: relative; /* Needed to define the z-index */
-  z-index: 2; /* Places the panels in front of the prize */
+  background-image: yellow;
+  background-size: 70px 120px;
+  transition: transform 2s;
+  transform: scaleX(0)
 }
 
-.curtain__panel--left {
-  /* Styles for sliding the left panel */
-}
-
-.curtain__panel--right {
-  /* Styles for sliding the right panel */
-}
+.rightDoor
+{
   
-.curtain__prize {
-  background: #333;
-  position: absolute; /* Forces the prize position into the container start */
-  z-index: 1; /* Places the prize behind the panels, which are z-index 2 */
-  width: 100%;
-  height: 100%;
-}
-input[type=checkbox] {
-  position: absolute; /* Force the checkbox at the start of the container */
-  cursor: pointer; /* Indicate the curtain is clickable */
-  width: 100%; /* The checkbox is as wide as the component */
-  height: 100%; /* The checkbox is as tall as the component */
-  z-index: 100; /* Make sure the checkbox is on top of everything else */
-  opacity: 0; /* Hide the checkbox */
-}
-/* When the checkbox is checked... */
-        
-/* Slide the first panel in */
-input[type=checkbox]:checked ~ div.curtain__panel--left {
-  transform: translateX(0);
-}
-        
-/* Slide the second panel in */
-input[type=checkbox]:checked ~ div.curtain__panel--right {
-  transform: translateX(0);
-}
-/* Slide the panel to the left out of the container */
-.curtain__panel--left {
-  transform: translateX(-100%);
 }
 
-/* Slide the panel to the right out of the container */
-.curtain__panel--right {
-  transform: translateX(100%);
+.rightDoor.closed
+{
+  transform: scaleX(.6);  
 }
+
+.leftDoor.closed
+{
+  transform: scaleX(.6);
+} */
