--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
 .App-link {
   color: #61dafb;
 } */
-
+/* 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,12 +36,12 @@
   to {
     transform: rotate(360deg);
   }
-}
-.button_panel 
+} */
+/* .button_panel 
 {
-  background: yellow;
+  background:green;
   height: 100%;
-}
+} */
 .sidenav {
   background: silver;
   height: 100%; /* Full-height: remove this if you want "auto" height */
@@ -53,6 +53,16 @@
   left: 0;
   /* overflow-x: hidden; */
   /* padding-top: 20px; */
+}
+.sidenav-item {
+  width: 100px;
+  height: 100px;
+  line-height: 100px;
+  text-align: center;
+  padding: 50;
+  border-radius: 50%;
+  font-size: 4.0rem;
+  display: inline-block;
 }
 .sidenav a {
   /* padding: 16px 30px 36px 16px; */
@@ -68,7 +78,7 @@
   color: red;
 }
 
-.button_panel {
+/* .button_panel {
   width: 100px;
   height: 200px;
   line-height: 100px;
@@ -77,7 +87,7 @@
   border-radius: 50%;
   font-size: 5.0rem;
   display: inline-block; 
- }
+ } */
  /* .buttons
  {
   width: 100px;
@@ -95,8 +105,30 @@
   
  } */
 
-/* .section  */
-/* {
+ /* .section {
+} */
+
+.section-content {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 40px;
+  text-align: center;
+}
+.sidenav-content {
+  background: silver;
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 160px; /* Set the width of the sidebar */
+  text-align: center;
+  position: fixed;
+  z-index: 100;
+  top: 0; /* Stay at the top */
+  left: 0;
+  overflow-x: hidden; 
+  padding-top: 100px;
+}
+
+/* /.section  *
+ {
   background-color: hotpink;
   height: 100vh;
   width: 200vh;
@@ -105,8 +137,8 @@
   align-items: center;
   transition-timing-function: 1s ease-in-out;
   margin: 0;
-} */
-div#box
+} */ 
+/* div#box
 {
   background: red;
   height: 100vh;
@@ -175,11 +207,11 @@ div#box6
   justify-content: center;
   align-items: center;
   transition-timing-function: 1s ease-in-out;
-}
+} */
 
 /* .leftDoor 
-{
-  z-index: 9;
+/* { */
+  /* z-index: 9;
   position: absolute; 
   top: 0; 
   width: 200%; 
@@ -187,20 +219,6 @@ div#box6
   background-image: yellow;
   background-size: 70px 120px;
   transition: transform 2s;
-  transform: scaleX(0)
-}
+  transform: scaleX(0) */
+/* } */
 
-.rightDoor
-{
-  
-}
-
-.rightDoor.closed
-{
-  transform: scaleX(.6);  
-}
-
-.leftDoor.closed
-{
-  transform: scaleX(.6);
-} */
