--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,11 @@
   /* overflow-x: hidden; */
   /* padding-top: 20px; */
 /* } */
+
+.h1 {
+  width: 100px;
+  height: 100px;
+}
 .sidenav-content {
   background: silver;
   height: 100%; /* Full-height: remove this if you want "auto" height */
@@ -119,8 +124,53 @@
   
  } */
 
- .section {
+ .section-content  {
   background: blue;
+  height: 100&;
+  width: 200%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition-timing-function: 1s ease-in-out;
+}
+div#section5 {
+  background-color: indigo;
+  height: 100vh;
+  width: 200vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition-timing-function: 1s ease-in-out;
+}
+div#section4 {
+  background-color: yellow;
+  height: 100vh;
+  width: 200vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition-timing-function: 1s ease-in-out;
+}
+div#section3 {
+  background-color: red;
+  height: 100vh;
+  width: 200vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition-timing-function: 1s ease-in-out;
+}
+div#section2 {
+  background-color: hotpink;
+  height: 100vh;
+  width: 200vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition-timing-function: 1s ease-in-out;
+}
+div#section1 {
+  background-color: hotpink;
   height: 100vh;
   width: 200vh;
   display: flex;
@@ -131,18 +181,18 @@
 
 
 /* Floor page */
-.section-content {
+/* .section-content h1 {
   width: 100%;
   margin: 0 auto;
   padding: 0;
-  text-align: center;
+  text-align: center; */
   /* background: yellow; */
   /* height: 100vh;
   width: 200vh;
   display: flex;
   justify-content: center;
   transition-timing-function: 1s ease-in-out */
-}
+/* } */
 
 
 /* background: hotpink;
