--- a/src/App.css
+++ b/src/App.css
@@ -66,11 +66,11 @@
   width: 150px; /* Set the width of the sidebar */
   text-align: center;
   position: fixed;
+  float: left;
   z-index: 100;
   top: 0; /* Stay at the top */
   left: 0;
   overflow-x: hidden; 
-  padding-top: 100px;
   padding-right: 25px;
 }
 .sidenav-item {
@@ -83,6 +83,64 @@
   font-size: 60px;
   display: inline-block;
 }
+.sidenav-items {
+
+}
+/* .floors {
+  background-color: indigo;
+} */
+
+div#box6{
+  background-color: lightcoral;
+  width: 100%;
+  height: 900px;
+  text-align: center;
+}
+div#box5 {
+  background-color: yellow;
+  width: 100%;
+  height: 900px;
+  text-align: center;
+}
+div#box4 {
+  background-color: teal;
+  width: 100%;
+  height: 900px;
+  text-align: center;
+}
+div#box3 {
+  background-color: blue;
+  width: 100%;
+  height: 900px;
+  text-align: center;
+}
+div#box2 {
+  background-color: orange;
+  width: 100%;
+  height: 900px;
+  text-align: center;
+}
+div#box1 {
+  background-color: plum;
+  width: 100%;
+  height: 900px;
+  text-align: center;
+}
+
+
+/* .sidenav-content {
+  position: relative;
+  float: left;
+  width: 100%;
+  height: 900px;
+  background: hotpink;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition-timing-function: 1s ease-in-out;
+ } */
+
 /* .sidenav a { */
   /* padding: 16px 30px 36px 16px; */
   /* padding: 16px;
@@ -124,16 +182,11 @@
   
  } */
 
- .section-content  {
-  background: blue;
-  height: 100&;
-  width: 200%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition-timing-function: 1s ease-in-out;
-}
-div#section5 {
+ 
+  
+
+
+ /* div#section5 {
   background-color: indigo;
   height: 100vh;
   width: 200vh;
@@ -177,7 +230,7 @@ div#section1 {
   justify-content: center;
   align-items: center;
   transition-timing-function: 1s ease-in-out;
-}
+} */
 
 
 /* Floor page */
