--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@
   height: 100px;
 }
 .sidenav-content {
-  background: hotpink;
+  background: beige;
   height: 100%; /* Full-height: remove this if you want "auto" height */
   width: 150px; /* Set the width of the sidebar */
   text-align: center;
@@ -102,7 +102,8 @@
 } */
 
 div#box6 {
-  background-color: lightcoral;
+  background: url("https://upload.wikimedia.org/wikipedia/commons/4/42/Emerald_tropical_lagoon_in_Phang_Nga_Bay%2C_Thailand.jpg");
+  /* background-color: lightcoral; */
   width: 100%;
   height: 900px;
   text-align: center;
@@ -140,7 +141,7 @@ div#box1 {
 
 .leftDoor {
   width: 50%;
-  background: url("https://images.unsplash.com/photo-1558325939-c3f590da2e2e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80");
+  background: url("https://media.freestocktextures.com/cache/ea/3d/ea3d7ddf85d051f84a4c301380da0104.jpg");
   /* background-color: yellow; */
   height: 100%;
   position: fixed;
@@ -152,7 +153,7 @@ div#box1 {
 }
 .rightDoor {
   width: 50%;
-  background: url("https://images.unsplash.com/photo-1558325939-c3f590da2e2e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80");
+  background: url("https://media.freestocktextures.com/cache/ea/3d/ea3d7ddf85d051f84a4c301380da0104.jpg");
   /* background-color: blue; */
   height: 100%;
   position: fixed;
