--- a/src/App.css
+++ b/src/App.css
@@ -149,7 +149,7 @@ div#box1 {
   padding: 0;
   top: 0;
   left: 0;
-  /* animation: leftDoor 3s; */
+  animation: leftDoor 3s;
 }
 .rightDoor {
   width: 50%;
@@ -161,7 +161,7 @@ div#box1 {
   padding: 0;
   top: 0;
   right: 0;
-  /* animation: rightDoor 3s; */
+  animation: rightDoor 3s;
 }
 @keyframes leftDoor {
   from {
@@ -179,7 +179,32 @@ div#box1 {
     right: -50%;
   }
 }
+/* ENTER TRANSITION */
+/* Declare transition start properties*/
+.slide-enter {
+  transform: translateX(-100vw);
+  opacity: 0;
+  position: absolute;
+}
 
+/* Declare transition properties */
+.slide-enter.slide-enter-active {
+  transform: translateX(0);
+  opacity: 1;
+  transition: all 300ms linear 300ms;
+}
+
+/* EXIT TRANSITION */
+.slide-exit {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+.slide-exit.slide-exit-active {
+  transform: translateX(100vw);
+  opacity: 0;
+  transition: all 300ms linear;
+}
 /* .sidenav-content {
   position: relative;
   float: left;
