--- a/src/App.css
+++ b/src/App.css
@@ -150,6 +150,7 @@ div#box1 {
   top: 0;
   left: 0;
   animation: leftDoor 3s;
+  animation-timing-function: ease-in-out;
 }
 .rightDoor {
   width: 50%;
@@ -162,6 +163,7 @@ div#box1 {
   top: 0;
   right: 0;
   animation: rightDoor 3s;
+  animation-timing-function: ease-in-out;
 }
 @keyframes leftDoor {
   from {
@@ -179,32 +181,49 @@ div#box1 {
     right: -50%;
   }
 }
+.section {
+  transition-timing-function: 1s ease;
+}
+
+.section-dark {
+  background: #333;
+  color: pink;
+  text-align: center;
+}
+
+.section-content {
+  max-width: 100%;
+  height: 900px;
+  margin: 0 auto;
+  padding: 40px;
+}
+
 /* ENTER TRANSITION */
 /* Declare transition start properties*/
-.slide-enter {
+/* .slide-enter {
   transform: translateX(-100vw);
   opacity: 0;
   position: absolute;
 }
 
 /* Declare transition properties */
-.slide-enter.slide-enter-active {
+/* .slide-enter.slide-enter-active {
   transform: translateX(0);
   opacity: 1;
   transition: all 300ms linear 300ms;
-}
+} */
 
 /* EXIT TRANSITION */
-.slide-exit {
+/* .slide-exit {
   transform: translateX(0);
   opacity: 1;
-}
+} */
 
-.slide-exit.slide-exit-active {
+/* .slide-exit.slide-exit-active {
   transform: translateX(100vw);
   opacity: 0;
   transition: all 300ms linear;
-}
+} */
 /* .sidenav-content {
   position: relative;
   float: left;
@@ -261,7 +280,6 @@ div#box1 {
 
 .section6 {
   background-color: indigo;
-
   width: 100%;
   height: 900px;
   display: flex;
@@ -270,7 +288,7 @@ div#box1 {
   transition-timing-function: 1s ease-in-out;
 }
 .section5 {
-  background-color: yellow;
+  background-color: green;
   width: 100%;
   height: 900px;
   display: flex;
@@ -297,7 +315,7 @@ div#box1 {
   transition-timing-function: 1s ease-in-out;
 }
 .section2 {
-  background-color: hotpink;
+  background-color: blue;
   width: 100%;
   height: 900px;
   display: flex;
