--- a/src/App.css
+++ b/src/App.css
@@ -95,8 +95,7 @@
   background-color: #f1f1f1;
   cursor: pointer;
 } */
-.sidenav-items {
-}
+
 /* .floors {
   background-color: indigo;
 } */
@@ -203,7 +202,9 @@ div#box1 {
   margin: 0 auto;
   padding: 40px;
 }
-
+.sidenav-item > .active {
+  border-bottom: 1px solid #333;
+}
 /* ENTER TRANSITION */
 /* Declare transition start properties*/
 /* .slide-enter {
@@ -253,9 +254,9 @@ div#box1 {
   background-color:silver;
 } */
 /* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
+/* .sidenav a:hover {
   color: red;
-}
+} */
 
 /* .button_panel {
   width: 100px;
@@ -284,7 +285,7 @@ div#box1 {
   
  } */
 
-.section6 {
+/* .section6 {
   background-color: indigo;
   width: 100%;
   height: 900px;
@@ -337,7 +338,7 @@ div#box1 {
   justify-content: center;
   align-items: center;
   transition-timing-function: 1s ease-in-out;
-}
+} */
 
 /* Floor page */
 /* .section-content h1 {
