--- a/src/App.css
+++ b/src/App.css
@@ -258,7 +258,7 @@ div#box1 {
   padding: 40px;
 }
 .section-africa {
-  background-image: url("https://www.thetimes.co.uk/expert-traveller/wp-content/uploads/2018/11/GettyImages-477451698-2200x880.jpg");
+  background-image: url("https://media.kasperskycontenthub.com/wp-content/uploads/sites/67/2020/03/04203957/0DSC04881-1024x683.jpg");
   background-size: cover;
   color: black;
   text-align: center;
